Pascal/test/cohadar/pascal/errors/num_of_arguments.pas
program test;

procedure njak(x,y:integer);
begin
end;

begin
	njak(3);
end.